--- a/Signup.html
+++ b/Signup.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="bg-img">
-        <img src="AAA.jpg" height="80px" width="150px"></div>
+        <img src="AAA.jpg" height="80px" width="150px">
         
         
 
@@ -47,7 +47,7 @@
                     <a href="#"> have an account?</a> 
                 </div>
                 <div class="field">
-                    <input type="submit" value="SIGNUP">
+                   <button>SIGNUP</button>
                 </div>
                 <div class="login">Or login with</div>
                 <!-- <div class="link">
